# Electrode_3D

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  참고자료1.md
.serena/: project.yml
comsol/: __init__.py  interface.py  simulation.py
configs/: default.yaml  training_fast.yaml  training_hq.yaml
docs/: ERD.md  MVP.md  PRD.md
electrode_generator/: __init__.py  cli.py  config.py  core.py
models/: __init__.py
models/slicegan/: __init__.py  discriminator.py  generator.py  trainer.py
postprocessing/: __init__.py  blender_integration.py  export.py  mesh_converter.py
preprocessing/: __init__.py  augmentation.py  image_processor.py
tests/: __init__.py  conftest.py  test_config.py  test_metrics.py  test_postprocessing.py  test_preprocessing.py  test_slicegan.py
utils/: __init__.py  metrics.py  visualization.py
